--- a/sass/style.sass
+++ b/sass/style.sass
@@ -72,6 +72,7 @@ section
   top: 85%
   cursor: pointer
   transition: linear 0.2s
+  display: none
   &:hover
     background: rgba(207,0,52, 1)
     animation: jump 0.5s 3
