--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,8 @@ section {
     background: #cf0034;
     animation: jump 0.5s 3; }
   .button-menu i {
-    font-size: 450%;
-    padding: 4px; }
+    font-size: 400%;
+    padding: 10px; }
 
 @keyframes jump {
   0% {
@@ -50,14 +50,16 @@ body {
   width: 100%;
   box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.5); }
   .myNavbar .navbar-header a {
-    color: white; }
+    color: white;
+    font-size: 1.5em; }
   .myNavbar .navbar-header button {
     background: rgba(0, 0, 0, 0.2);
     border: solid 1px white; }
     .myNavbar .navbar-header button span {
       border: solid 1px white; }
   .myNavbar li a {
-    color: white; }
+    color: white;
+    font-size: 1.5em; }
     .myNavbar li a:hover, .myNavbar li a:focus {
       color: white;
       background: rgba(0, 0, 0, 0.2); }
@@ -105,7 +107,7 @@ body {
 /*about-me*/
 #about-me img {
   width: 100%;
-  height: 400px;
+  height: auto;
   box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.5); }
 
 #about-me h2 {
@@ -180,16 +182,6 @@ body {
   .tp-grid .tp-info {
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.5); }
 
-.icons {
-  width: 90%;
-  height: 25%;
-  color: gold;
-  font-size: 140%;
-  z-index: 1; }
-
-.icons-black {
-  color: black; }
-
 /*projects*/
 #projects h2 {
   background: rgba(0, 0, 0, 0.3);
@@ -213,12 +205,86 @@ body {
   margin-top: 2.5%;
   padding: 0;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5); }
-  #projects .carousel .center img {
-    width: 100%;
-    height: 300px; }
-    #projects .carousel .center img:hover {
-      cursor: pointer;
-      transform: scale(1.2); }
+  #projects .carousel .center .image {
+    position: relative;
+    overflow: hidden;
+    height: 100%; }
+    #projects .carousel .center .image:after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(10, 70, 90, 0.3);
+      top: 0;
+      left: 0;
+      visibility: hidden;
+      opacity: 0;
+      z-index: 1; }
+    #projects .carousel .center .image:hover {
+      cursor: pointer; }
+      #projects .carousel .center .image:hover:after {
+        visibility: visible;
+        opacity: 1; }
+      #projects .carousel .center .image:hover img {
+        transform: scale(1.2); }
+      #projects .carousel .center .image:hover .btn-image {
+        visibility: visible;
+        opacity: 1;
+        transition-duration: 0.4s;
+        transition-timing-function: ease; }
+      #projects .carousel .center .image:hover .ico {
+        visibility: visible;
+        opacity: 1; }
+    #projects .carousel .center .image img {
+      width: 100%;
+      height: 300px;
+      transition-duration: 0.4s;
+      transition-timing-function: ease; }
+    #projects .carousel .center .image .btn-image {
+      position: absolute;
+      z-index: 2;
+      visibility: hidden;
+      opacity: 0;
+      display: flex;
+      width: 50%;
+      top: 60%;
+      left: 50%;
+      transform: translate(-50%, -60%);
+      justify-content: space-between; }
+      #projects .carousel .center .image .btn-image button {
+        border: 2px solid #0a465a;
+        background: white;
+        color: #0a465a;
+        border-radius: 10px;
+        font-size: 2em;
+        font-weight: bold;
+        padding: 3% 5%;
+        transition-duration: 0.4s;
+        transition-timing-function: ease; }
+        #projects .carousel .center .image .btn-image button:hover {
+          background: #0a465a;
+          color: white;
+          border: 2px solid white; }
+    #projects .carousel .center .image .ico {
+      position: absolute;
+      z-index: 2;
+      visibility: hidden;
+      opacity: 0;
+      height: auto;
+      width: 90%;
+      background: rgba(255, 255, 255, 0.8);
+      border-radius: 10px;
+      display: flex;
+      justify-content: space-around;
+      top: 10%;
+      left: 50%;
+      transform: translate(-50%, -10%); }
+      #projects .carousel .center .image .ico img {
+        display: inline-block;
+        width: 35px;
+        height: 35px;
+        padding: 2%;
+        transition: none; }
   #projects .carousel .btn-carousel button {
     position: absolute;
     top: 50%;
@@ -236,58 +302,6 @@ body {
       color: rgba(0, 0, 0, 0.5); }
   #projects .carousel .right {
     right: 0%; }
-
-/*modals*/
-.modals {
-  width: 100%; }
-  .modals h4 {
-    background: rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    text-transform: uppercase;
-    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.5);
-    font-family: 'Permanent Marker', cursive;
-    background: none;
-    box-shadow: none;
-    font-size: 2.8em;
-    padding-bottom: 2%;
-    padding-top: 0;
-    color: #0a465a;
-    font-family: 'Pangolin', cursive;
-    color: black; }
-  .modals img {
-    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.5);
-    padding: 5px; }
-
-.modal-body [class*="col-"] {
-  padding: 10px 0; }
-  .modal-body [class*="col-"] button {
-    border: 2px solid #0a465a;
-    background: white;
-    color: #0a465a;
-    border-radius: 10px;
-    font-size: 1em;
-    padding: 0.75%;
-    transition-duration: 0.4s;
-    transition-timing-function: ease; }
-    .modal-body [class*="col-"] button:hover {
-      background: #0a465a;
-      color: white;
-      border: 2px solid #0a465a; }
-
-.modal-footer .btn {
-  transition-duration: 0.4s;
-  transition-timing-function: ease;
-  background: #0a465a;
-  color: white; }
-  .modal-footer .btn:hover {
-    border: 2px solid #0a465a;
-    background: white;
-    color: #0a465a; }
-
-.ico-tech {
-  display: inline-block;
-  width: 50px;
-  height: 50px; }
 
 /*contact*/
 #contact {
@@ -313,7 +327,10 @@ body {
   padding: 2%;
   width: 100%; }
   #adress a {
-    padding: 0 2%; }
+    padding: 0 2%;
+    text-decoration: none; }
+    #adress a:hover {
+      text-decoration: none; }
     #adress a i {
       color: white;
       padding: 2%;
@@ -324,6 +341,18 @@ body {
       #adress a i:hover {
         color: #051e23;
         background: white; }
+    #adress a span {
+      color: white;
+      padding: 1.5%;
+      font-size: 1.3em;
+      border: 2px solid white;
+      transition-duration: 0.4s;
+      transition-timing-function: ease;
+      font-weight: bold; }
+      #adress a span:hover {
+        color: #051e23;
+        background: white;
+        font-weight: bold; }
   #adress p {
     font-size: 1.2em; }
 
@@ -343,6 +372,8 @@ body {
     top: 80%; }
   .myNavbar {
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5); }
+    .myNavbar li a {
+      font-size: 1.2em; }
   .jumbotron {
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5); }
     .jumbotron h1 {
@@ -354,6 +385,8 @@ body {
     font-size: 1.3em; }
   #about-me p {
     font-size: 0.8em; }
+  #about-me img {
+    margin-bottom: 10%; }
   #technology h2 {
     font-size: 1.3em; }
   #technology p {
@@ -390,6 +423,8 @@ body {
     top: 80%; }
   .myNavbar {
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5); }
+    .myNavbar li a {
+      font-size: 1.3em; }
   .jumbotron {
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5); }
     .jumbotron h1 {
@@ -401,6 +436,8 @@ body {
     font-size: 1.4em; }
   #about-me p {
     font-size: 0.9em; }
+  #about-me img {
+    margin-bottom: 10%; }
   #technology h2 {
     font-size: 1.4em; }
   #technology p {
@@ -416,8 +453,6 @@ body {
     font-size: 1.4em; }
   #projects p {
     font-size: 0.9em; }
-  .modals {
-    width: 100vw; }
   #contact h2 {
     font-size: 1.4em; }
   #contact p {
@@ -446,7 +481,13 @@ body {
     text-align: center; }
   .button-menu {
     left: 90%;
-    top: 80%; } }
+    top: 80%; }
+  .myNavbar .navbar-header a {
+    font-size: 1.2em; }
+  .myNavbar li a {
+    font-size: 1.2em; }
+  #about-me img {
+    margin-bottom: 10%; } }
 
 @media (min-width: 992px) and (max-width: 1199px) {
   .align {
