--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Pangolin')
-@import url('https://fonts.googleapis.com/css?family=Permanent+Marker')
+@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two');
 @import url('https://fonts.googleapis.com/css?family=Poppins')
 
 
@@ -28,7 +28,8 @@ $background-shadow: rgba(0,0,0,0.3)
   border-radius: 10px
   text-transform: $main-text-transform
   box-shadow: $shadow
-  font-family: 'Permanent Marker', cursive
+  font-family: 'Shadows Into Light Two', cursive
+  font-weight: 900
 
 @mixin h-style
   @include header-style
@@ -38,7 +39,8 @@ $background-shadow: rgba(0,0,0,0.3)
   padding-bottom: 2%
   padding-top: 0
   color: rgb(10,70,90)
-  font-family: 'Pangolin', cursive
+  font-family: 'Shadows Into Light Two', cursive
+  font-weight: 900
 
 @mixin button-style
   width: 97%
@@ -208,6 +210,8 @@ body
     color: $font-color-in-dark-background
   p
     font-size: 1.3em
+  span
+    font-size: 1em
   .back
     @include button-style
     display: none
@@ -373,7 +377,7 @@ body
     
 /*footer*/
 
-#footer
+#myfooter
   padding: 1% 0 
   background: rgb(2,20,25)
   p
@@ -487,6 +491,8 @@ body
       font-size: 1.4em
     p
       font-size: 0.9em
+    span
+      font-size: 0.8em
     .back
       display: none
       position: absolute
@@ -522,6 +528,13 @@ body
     
   .jumbotron
     height: 150vh
+  #technology
+    h2
+      font-size: 1.4em
+    p
+      font-size: 0.9em
+    span
+      font-size: 0.9em
     
 @media(min-width:680px) and (max-width: 767px) and (orientation: landscape)
     
@@ -531,6 +544,13 @@ body
     
   .jumbotron
     height: 140vh
+  #technology
+    h2
+      font-size: 1.4em
+    p
+      font-size: 0.9em
+    span
+      font-size: 0.9em
     
 @media (min-width:768px) and (max-width: 991px)
     
@@ -552,6 +572,13 @@ body
   #about-me
     img
       margin-bottom: 10%
+  #technology
+    h2
+      font-size: 1.4em
+    p
+      font-size: 0.9em
+    span
+      font-size: 0.9em
     
 @media (min-width:992px) and (max-width: 1199px)
     
@@ -561,6 +588,14 @@ body
   .button-menu
     left: 90%
     top: 80%
+    
+  #technology
+    h2
+      font-size: 1.4em
+    p
+      font-size: 0.9em
+    span
+      font-size: 0.9em
     
 
 
