--- a/sass/style.sass
+++ b/sass/style.sass
@@ -288,7 +288,8 @@ body
           left: 50%
           transform: translate(-50%, -60%)
           justify-content: space-between
-          button
+          .projectBtn
+            text-decoration: none
             border: 2px solid rgb(10,70,90)
             background: white
             color: rgb(10,70,90)
