--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,8 @@ body {
   .tp-grid li {
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.5); }
   .tp-grid .tp-title {
-    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.5); }
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.5);
+    height: 80px; }
   .tp-grid img {
     width: 200px;
     height: 200px; }
@@ -268,7 +269,7 @@ body {
         border-radius: 10px;
         font-size: 2em;
         font-weight: bold;
-        padding: 3% 5%;
+        padding: 2%;
         transition-duration: 0.4s;
         transition-timing-function: ease; }
         #projects .carousel .center .image .btn-image .projectBtn:hover {
@@ -280,6 +281,7 @@ body {
       z-index: 2;
       visibility: hidden;
       opacity: 0;
+      padding: 1.5%;
       height: auto;
       width: 90%;
       background: rgba(255, 255, 255, 0.8);
