--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,605 +2,18 @@
 @import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two');
 @import url('https://fonts.googleapis.com/css?family=Poppins')
 
+@import _mixins
+@import _mainReguls
+@import _navigation
+@import _jumbo
+@import _about-me
+@import _technology
+@import _pojects
+@import _contact-adress-footer
+@import _media
 
-$font-color-in-dark-background: rgb(255,255,255)
-$background-button: rgb(10,70,90)
-$main-text-transform: uppercase
-$main-scale: scale(1.2)
-$hover-button: rgb(2,20,25)
-$shadow: 10px 5px 5px rgba(0,0,0,0.5)
-$background-shadow: rgba(0,0,0,0.3)
 
-/*mixin*/
-
-@mixin main-transition
-  transition-duration: 0.4s
-  transition-timing-function: ease
-
-@mixin layer
-  background: rgba(0, 0, 0, 0.8)
-  width: 100%
-  height: 100%
-  border-radius: 5px
-
-@mixin header-style
-  background: rgba(0,0,0,0.3)
-  border-radius: 10px
-  text-transform: $main-text-transform
-  box-shadow: $shadow
-  font-family: 'Shadows Into Light Two', cursive
-  font-weight: 900
-
-@mixin h-style
-  @include header-style
-  background: none
-  box-shadow: none
-  font-size: 2.8em
-  padding-bottom: 2%
-  padding-top: 0
-  color: rgb(10,70,90)
-  font-family: 'Shadows Into Light Two', cursive
-  font-weight: 900
-
-@mixin button-style
-  width: 97%
-  height: 50px
-  background: white
-  border-radius: 50%
-  width: 50px
-  height: 50px
-  border: rgba(0,0,0, 0.3) 1px solid
-
-@mixin icon-style
-  font-size: 2em
-  font-weight: 900
-  color: rgba(0,0,0, 0.5)
-
-@mixin visible-style
-  visibility: visible
-  opacity: 1
-
-@mixin layer-style
-  position: absolute
-  z-index: 2
-  visibility: hidden
-  opacity: 0
-
-@mixin ico-style
-  @include layer-style
-  height: auto
-  width: 90%
-  background: rgba(255,255,255, 0.8)
-  border-radius: 10px
-  display: flex
-  justify-content: space-around
-
-@mixin img-ico-style
-  display: inline-block
-  width: 35px
-  height: 35px
-  padding: 2%
-  transition: none
-
-/*main*/
-
-*
-  box-sizing: border-box
-
-section
-  padding: 5% 0
-
-.button-menu
-  border-radius: 50%
-  background: rgba(2,20,25, 0.4)
-  color: white
-  position: fixed
-  z-index: 50
-  left: 95%
-  top: 85%
-  cursor: pointer
-  transition: linear 0.2s
-  &:hover
-    background: rgba(207,0,52, 1)
-    animation: jump 0.5s 3
-  i
-    font-size: 400%
-    padding: 10px
-    
-@keyframes jump
-  0%
-    transform: translate(0,0px)
-  50%
-    transform: translate(0,-30px)
-  100%
-    transform: translate(0,0px)
-
-/*body*/
-
-body
-  margin: 0 0
-  padding: 0 0
-  font-family: 'Poppins', sans-serif
-
-/*nav*/
-
-.myNavbar
-  background: rgba(0,0,0,0.3)
-  font-family: 'Pangolin', cursive
-  margin: 0
-  position: absolute
-  z-index: 2
-  width: 100%
-  box-shadow: $shadow
-  .navbar-header
-    a
-      color: $font-color-in-dark-background
-      font-size: 1.5em
-    button
-      background: rgba(0,0,0,0.2)
-      border: solid 1px white
-      span
-        border: solid 1px white
-  li
-    a
-      color: $font-color-in-dark-background
-      font-size: 1.5em
-      &:hover,
-      &:focus
-        color: $font-color-in-dark-background
-        background: rgba(0,0,0,0.2)
-    
-/*jumbotron*/
-    
-.jumbotron
-  background: url("../image/help.jpeg")
-  background-position: center
-  background-size: cover
-  width: 100%
-  height: 100vh
-  position: relative
-  box-shadow: $shadow
-  margin: 0
-  .slogan
-    color: $font-color-in-dark-background
-    position: absolute
-    top: 60%
-    left: 50%
-    transform: translate(-50%, -60%)
-    padding: 4vh 0
-    width: 80%
-    h1
-      @include header-style
-      padding: 2%
-  .myBtn
-    position: absolute
-    padding: 1%
-    top: 80%
-    left: 35%
-    font-size: 150%
-    background: $background-button
-    border: none
-    @include main-transition
-    box-shadow: $shadow
-    &:hover
-      background: $hover-button
-      transform: $main-scale
-    
-/*about-me*/
-
-#about-me
-  img
-    width: 100%
-    height: auto
-    box-shadow: $shadow
-  h2
-    @include h-style
-  p
-    font-size: 1.3em
-    a
-      text-decoration: none
-    
-/*technology*/
-
-#technology
-  background: rgb(10,70,90)
-  color: $font-color-in-dark-background
-  h2
-    @include h-style
-    color: $font-color-in-dark-background
-  p
-    font-size: 1.3em
-  span
-    font-size: 1em
-  .back
-    @include button-style
-    display: none
-    position: absolute
-    right: 1%
-    top: 10%
-    box-shadow: $shadow
-    i
-      @include icon-style
-        
-.margin-left
-  margin-left: 5%
-
-.tp-grid
-  z-index: 1
-  li
-    box-shadow: $shadow
-  .tp-title
-    box-shadow: $shadow
-  img
-    width: 200px
-    height: 200px
-  .tp-info
-    box-shadow: $shadow
-  
-/*projects*/
-
-#projects
-  h2
-    @include h-style
-  p
-    font-size: 1.3em
-  .carousel
-    position: relative
-    margin-top: 2.5% 
-    padding: 0
-    box-shadow: 0px 5px 5px rgba(0,0,0,0.5)
-    .center
-      .image
-        position: relative
-        overflow: hidden
-        height: 100%
-        &:after
-          content: ""
-          position: absolute
-          width: 100%
-          height: 100%
-          background: rgba(10,70,90, 0.3)
-          top: 0
-          left: 0
-          visibility: hidden
-          opacity: 0
-          z-index: 1
-        &:hover
-          cursor: pointer
-          &:after
-            @include visible-style
-          img
-            transform: $main-scale
-          .btn-image
-            @include visible-style
-            @include main-transition
-          .ico
-            @include visible-style
-        img
-          width: 100%
-          height: 300px
-          @include main-transition
-        .btn-image
-          @include layer-style
-          display: flex
-          width: 55%
-          top: 60%
-          left: 50%
-          transform: translate(-50%, -60%)
-          justify-content: space-between
-          .projectBtn
-            text-decoration: none
-            border: 2px solid rgb(10,70,90)
-            background: white
-            color: rgb(10,70,90)
-            border-radius: 10px
-            font-size: 2em
-            font-weight: bold
-            padding: 3% 5%
-            @include main-transition
-            &:hover
-              background: $background-button
-              color: white
-              border: 2px solid white
-        .ico
-          @include ico-style
-          top: 10%
-          left: 50%
-          transform: translate(-50%, -10%)
-          img
-            @include img-ico-style
-
-      
-    .btn-carousel
-      button
-        position: absolute
-        top: 50%
-        z-index: 2
-        @include button-style
-        i
-          font-size: 2em
-          font-weight: 900
-          color: rgba(0,0,0, 0.5)
-    .right
-      right: 0%
-
-/*contact*/
-
-#contact
-  background: rgb(10,70,90)
-  color: $font-color-in-dark-background
-  h2
-    font-size: 2.5em
-    padding: 2% 0
-  p
-    font-size: 1.5em
-  .btn
-    @include main-transition
-    &:hover
-      background: $background-button
-      color: white
-      border: 2px solid white
-
-/*adres*/
-
-#adress
-  background: rgb(5,30,35)
-  color: $font-color-in-dark-background
-  padding: 2%
-  width: 100%
-  a
-    padding: 0 2%
-    text-decoration: none 
-    &:hover
-      text-decoration: none 
-    i
-      color: $font-color-in-dark-background
-      padding: 2%
-      font-size: 1.7em
-      border: 2px solid white
-      @include main-transition
-      &:hover
-        color: rgb(5,30,35)
-        background: white
-    span
-      color: $font-color-in-dark-background
-      padding: 1.5%
-      font-size: 1.3em
-      border: 2px solid white
-      @include main-transition
-      font-weight: bold
-      &:hover
-        color: rgb(5,30,35)
-        background: white
-        font-weight: bold
-  p
-    font-size: 1.2em
-    
-/*footer*/
-
-#myfooter
-  padding: 1% 0 
-  background: rgb(2,20,25)
-  p
-    margin: 0
-    color: $font-color-in-dark-background
-    
-    
-@media(max-width: 350px)
-    
-  .align
-    text-align: center
-    
-  .button-menu
-    left: 80%
-    top: 80%
-    
-  .myNavbar
-    box-shadow: 0px 5px 5px rgba(0,0,0,0.5)
-    li
-      a
-        font-size: 1.2em
-    
-  .jumbotron
-    box-shadow: 0px 5px 5px rgba(0,0,0,0.5)
-    h1
-      font-size: 1.8em
-    .myBtn
-      font-size: 0.8em
-      padding: 2%
-    
-    
-  #about-me
-    h2
-      font-size: 1.3em
-    p
-      font-size: 0.8em
-    img
-      margin-bottom: 10%
-    
-  #technology
-    h2
-      font-size: 1.3em
-    p
-      font-size: 0.8em
-    span
-      font-size: 0.8em
-    .back
-      display: none
-      position: absolute
-      right: 1%
-      top: 1%
-    
-  .margin-left
-    margin-left: auto
-    
-  #projects
-    h2
-      font-size: 1.3em
-    p
-      font-size: 0.8em
-    
-  .modals
-    width: 100vw
-    
-  #contact
-    h2
-      font-size: 1.3em
-    p
-      font-size: 0.8em
-    
-  #adress
-    h3
-      font-size: 1.3em
-    p
-      font-size: 0.8em
-    
-@media(min-width: 351px) and (max-width: 767px)
-    
-  .align
-    text-align: center
-
-  .button-menu
-    left: 82.5%
-    top: 80%
-    
-  .myNavbar
-    box-shadow: 0px 5px 5px rgba(0,0,0,0.5)
-    li
-      a
-        font-size: 1.3em
-    
-  .jumbotron
-    box-shadow: 0px 5px 5px rgba(0,0,0,0.5)
-    h1
-      font-size: 2em
-    .myBtn
-      font-size: 1em
-      padding: 2%
-    
-    
-  #about-me
-    h2
-      font-size: 1.4em
-    p
-      font-size: 0.9em
-    img
-      margin-bottom: 10%
-    
-  #technology
-    h2
-      font-size: 1.4em
-    p
-      font-size: 0.9em
-    span
-      font-size: 0.8em
-    .back
-      display: none
-      position: absolute
-      right: 1%
-      top: 1%
-    
-  .margin-left
-    margin-left: auto
-    
-  #projects
-    h2
-      font-size: 1.4em
-    p
-      font-size: 0.9em
-    
-  #contact
-    h2
-      font-size: 1.4em
-    p
-      font-size: 0.9em
-    
-  #adress
-    h3
-      font-size: 1.2em
-    p
-      font-size: 0.9em
-    
-@media(min-width:461px) and (max-width: 679px) and (orientation: landscape)
-    
-  .button-menu
-    left: 87%
-    top: 70%
-    
-  .jumbotron
-    height: 150vh
-  #technology
-    h2
-      font-size: 1.4em
-    p
-      font-size: 0.9em
-    span
-      font-size: 0.9em
-    
-@media(min-width:680px) and (max-width: 767px) and (orientation: landscape)
-    
-  .button-menu
-    left: 90%
-    top: 80%
-    
-  .jumbotron
-    height: 140vh
-  #technology
-    h2
-      font-size: 1.4em
-    p
-      font-size: 0.9em
-    span
-      font-size: 0.9em
-    
-@media (min-width:768px) and (max-width: 991px)
-    
-  .align
-    text-align: center
-    
-  .button-menu
-    left: 90%
-    top: 80%
-    
-  .myNavbar
-    .navbar-header
-      a
-        font-size: 1.2em
-    li
-      a
-        font-size: 1.2em
-    
-  #about-me
-    img
-      margin-bottom: 10%
-  #technology
-    h2
-      font-size: 1.4em
-    p
-      font-size: 0.9em
-    span
-      font-size: 0.9em
-    
-@media (min-width:992px) and (max-width: 1199px)
-    
-  .align
-    text-align: center
-    
-  .button-menu
-    left: 90%
-    top: 80%
-    
-  #technology
-    h2
-      font-size: 1.4em
-    p
-      font-size: 0.9em
-    span
-      font-size: 0.9em
-    
 
 
     
     
-      
-      
